# AXON

./: .gitignore  1. AXON_Language_Spec_v0.3.docx  10. AIEONYX_C5_Philosophy.docx  2. AXON_Grammar_Spec_v0.3.docx  3. AXON_Grammar_Patch_v0.3.1_FINAL.docx  4. AXON_MemoryModel_v0.2.1_UPDATED.docx  5. AXON_Error_Message_Spec_v1.0.docx  6. AXON_Compiler_Pipeline_Contracts_v1.0.docx  7. AXON_Library_Architecture_v1.0.docx  8. AXON_Innovation_Synthesis_v0.3.docx  9. AXON_Resilience_Document.docx  AXON_Language_Spec_v0.1.docx  COPYRIGHT  Cargo.toml  LICENSE  README.md  main.rs  monitor.axon  monitor.ll  monitor.rs  nvidia_result.ipynb  p35_patch.py  p36_patch.py  p37_patch.py  patch_p11_clippy.py  patch_p11_clippy2.py  patch_p11_clippy3.py  patch_p11_clippy4.py  patch_p11_clippy5.py  patch_p11_clippy6.py  patch_p11_codegen.py  patch_p11_hir.py  patch_p11_m2.py  patch_p11_m3.py  patch_p11_tests.py  vector_add.cubin  vector_add.ptx
.github/: FUNDING.yml
axon_ai/: Cargo.toml
axon_ai/src/: aipl.rs  constraint_parser.rs  contract_suggestor.rs  csr.rs  error.rs  ibi.rs  lib.rs  ocu.rs  qcc.rs  sfl.rs  spec.rs  translator.rs  verifier.rs
axon_ai/tests/: p502_correct.axon  p502_violation.axon  p503_suggest.axon  p509_aegis_monitor.axon
axon_alloc/: Cargo.toml  README.md
axon_alloc/src/: allocator.rs  boxed.rs  heap.rs  lib.rs  prelude.rs  slab.rs  sync.rs
axon_alloc/src/collections/: btree.rs  map.rs  mod.rs  string.rs  vec.rs
axon_cli/: Cargo.toml
axon_cli/src/: main.rs
axon_codegen/: Cargo.toml
axon_codegen/src/: apr.rs  dwc.rs  error.rs  esd.rs  generator.rs  lib.rs  oih.rs  tss.rs  types.rs  uat.rs
axon_compute/: Cargo.toml
axon_compute/kani/: verify_compute.rs
axon_compute/src/: checkpoint.rs  dispatch.rs  kernel.rs  lib.rs  mesh.rs
axon_compute/tests/: tc_p34_m1_dispatch.rs  tc_p34_m2_kernel_mesh.rs  tc_p34_m3_m4_checkpoint.rs
axon_core/: Cargo.toml  README.md
axon_core/src/: error.rs  lib.rs  macros.rs  prelude.rs  result.rs  types.rs
axon_core/src/traits/: convert.rs  display.rs  hash.rs  mod.rs
axon_drivers/: Cargo.toml
axon_drivers/src/: lib.rs
axon_drivers/src/generic/: audio.rs  display.rs  hid.rs  mod.rs  net.rs  storage.rs
axon_drivers/src/sovereign/: discovery.rs  mod.rs  pd_isolation.rs  plugin.rs  registry.rs
axon_fs/: Cargo.toml
axon_fs/src/: fs.rs  lib.rs  policy.rs  tier.rs
axon_genesis/: Cargo.toml
axon_genesis/src/: bootinfo.rs  capability.rs  genesis.rs  lib.rs
axon_integration/: Cargo.toml
axon_integration/src/: lib.rs  test_ai.rs  test_alloc.rs  test_alloc_sovereign.rs  test_audit.rs  test_axfs.rs  test_boot.rs  test_core.rs  test_driver_pal.rs  test_drivers.rs  test_genesis.rs  test_irq.rs  test_pal.rs  test_pipeline.rs  test_result_payload.rs  test_sel4_asm.rs  test_sovereign_drivers.rs  test_verify.rs
axon_learn/: Cargo.toml
axon_learn/kani/: verify_learn.rs
axon_learn/src/: layers.rs  lib.rs  loss.rs  optim.rs  tape.rs
axon_learn/tests/: tc_p33_m1_tape.rs  tc_p33_m2_layers.rs  tc_p33_m3_m4_loss_optim.rs
axon_lexer/: Cargo.toml
axon_lexer/src/: indent.rs  lexer.rs  lib.rs  span.rs  token.rs
axon_llvm/: Cargo.toml
axon_llvm/src/: codegen.rs  error.rs  ir.rs  lib.rs  types.rs
axon_math/: Cargo.toml
axon_math/kani/: verify_arithmetic.rs
axon_math/src/: ffi.rs  lib.rs  linalg.rs  numerical.rs  stats.rs
axon_math/tests/: tc_p31_m1_linalg.rs  tc_p31_m2_stats.rs  tc_p31_m3_numerical.rs
axon_pal/: Cargo.toml  README.md
axon_pal/src/: lib.rs  stub.rs  types.rs
axon_pal/src/traits/: fs.rs  hw.rs  io.rs  mod.rs  net.rs  process.rs  sync.rs  time.rs
axon_pal_linux/: Cargo.toml  README.md
axon_pal_linux/src/: error.rs  fs.rs  hw.rs  io.rs  lib.rs  net.rs  path.rs  process.rs  sync.rs  time.rs
axon_pal_macos/: Cargo.toml  README.md
axon_pal_macos/src/: error.rs  fs.rs  io.rs  lib.rs  net.rs  process.rs  sync.rs  time.rs
axon_pal_sel4/: Cargo.toml  README.md
axon_pal_sel4/src/: fs.rs  io.rs  lib.rs  net.rs  process.rs  sync.rs  time.rs
axon_pal_sel4/src/sel4/: ipc.rs  mod.rs  syscall.rs
axon_pal_windows/: Cargo.toml  README.md
axon_pal_windows/src/: fs.rs  io.rs  lib.rs  net.rs  process.rs  sync.rs  time.rs
axon_parser/: Cargo.toml
axon_parser/fuzz/: Cargo.toml
axon_parser/fuzz/fuzz_targets/: fuzz_parse.rs
axon_parser/src/: ast.rs  axon_manifest.rs  axon_std.rs  borrow.rs  capflow.rs  codegen.rs  driver.rs  error.rs  hir.rs  infer.rs  lexer.rs  lib.rs  mono.rs  parser.rs  profile.rs  sec.rs  tvt.rs  verify_integration.rs
axon_rt/: Cargo.toml
axon_rt/src/: lib.rs  monotonic.rs  temporal.rs  witness.rs  witness_analysis.rs
axon_sel4/: Cargo.toml
axon_sel4/src/: cap.rs  ipc.rs  irq.rs  lib.rs  mem.rs  types.rs
axon_std/: Cargo.toml
axon_std/src/: lib.rs
axon_std/src/ai/: aipl.rs  client.rs  embeddings.rs  inference.rs  mod.rs  model.rs  weight.rs
axon_std/src/audit/: chain.rs  consent.rs  event.rs  mod.rs  sink.rs
axon_std/src/verify/: cache.rs  check.rs  guard.rs  mod.rs  quorum.rs  witness.rs
axon_tensor/: Cargo.toml
axon_tensor/kani/: verify_tensor.rs
axon_tensor/src/: dyn_tensor.rs  lib.rs  ops.rs  simd.rs  tensor.rs
axon_tensor/tests/: tc_p32_m1_tensor.rs  tc_p32_m2_dyn_tensor.rs  tc_p32_m3_simd.rs
axon_verify_core/: Cargo.toml  VERIFICATION_REPORT.md
axon_verify_core/proofs/: KANI_PROOF_RECORD.md
axon_verify_core/src/: checker.rs  contract.rs  enforcer.rs  lib.rs
docs/: 7A-7B-profiles.md  7C-generics.md  7D-traits.md  7E-ownership.md  7F-dispatch.md  7G-verification.md  7H-llvm-emission.md  AUDIT-TRAIL.md  PHASE8-PROMPT.md  README.md  compiler-pipeline.md  getting-started.md  grammar.md  language-spec.md  memory-model.md
docs/archive/phase5_cli/: dvg.rs  fcig.rs  main.rs
docs/archive/phase5_parser/: ast.rs  lib.rs
docs/milestones/sel4-strict/: axon.system  axon_image_debug.img.sha256  axon_image_debug.img.sig  axon_pd.c  axon_prog.axon  report_debug.txt
docs/milestones/sel4-strict/ipc-demo/: axon_ipc.system  (+5 more)
examples/: monitor.rs  vector_add.axon  vector_add.ll
monitor_axon_out/: Cargo.toml
monitor_axon_out/src/: lib.rs  main.rs
(+8 files in other folders)
