[workspace]
resolver = "2"
members = [
    "axon_lexer",
    "axon_parser",
    "axon_codegen",
    "axon_rt",
    "axon_std",
    "axon_cli",
]

# Workspace-wide dependency versions
[workspace.dependencies]
axon_lexer   = { path = "axon_lexer"   }
axon_parser  = { path = "axon_parser"  }
axon_codegen = { path = "axon_codegen" }
axon_rt      = { path = "axon_rt"      }
axon_std     = { path = "axon_std"     }

[workspace.metadata]
description = "AXON — AI-Native Programming Language"
authors     = ["Edison Lepiten <aieonyx>"]
license     = "SEE LICENSE FILE"
repository  = "https://github.com/aieonyx/axon"
