[workspace]
resolver = "2"
members = [
    "axon_core",
    "axon_alloc",
    "axon_pal",
    "axon_pal_linux",
    "axon_pal_sel4",
    "axon_pal_macos",
    "axon_pal_windows",
    "axon_integration",
    "axon_verify_core",
    "axon_lexer",
    "axon_parser",
    "axon_codegen",
    "axon_rt",
    "axon_std",
    "axon_llvm",
    "axon_ai",
    "axon_cli",
]

# Workspace-wide dependency versions
[workspace.dependencies]
axon_core    = { path = "axon_core"    }
    axon_lexer   = { path = "axon_lexer"   }
axon_parser  = { path = "axon_parser"  }
axon_codegen = { path = "axon_codegen" }
axon_rt      = { path = "axon_rt"      }
axon_std     = { path = "axon_std"     }
axon_llvm    = { path = "axon_llvm"    }
axon_ai     = { path = "axon_ai"      }

[workspace.metadata]
description = "AXON — AI-Native Programming Language"
authors     = ["Edison Lepiten <aieonyx.eu@gmail.com>"]
license     = "SEE LICENSE FILE"
repository  = "https://github.com/aieonyx/axon"
