[package]
name        = "axon_ai"
version     = "0.1.0"
edition     = "2021"
description = "AXON AI Assistance Engine — Phase 5"
authors     = ["Edison Lepiten <aieonyx>"]

# Architecture decision (post-peer-review):
# AI is ASSISTANT. Formal methods are GATE.
# The LLM proposes formal specs. The deterministic verifier enforces them.
# The LLM is never in the Trusted Computing Base.

[dependencies]
axon_lexer  = { path = "../axon_lexer"  }
axon_parser = { path = "../axon_parser" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
