[package]
name = "axon_math"
version = "0.1.0"
edition = "2021"
authors = ["Edison Lepiten <aieonyx.eu@gmail.com>"]
license = "Apache-2.0"
description = "ONYX Framework — Core Math Stdlib (Phase 31)"
repository = "https://github.com/aieonyx/AXON"

[dependencies]
libm       = { version = "0.2",  default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.4", default-features = false }
micromath  = { version = "2.0",  default-features = false, optional = true }

[dependencies.nalgebra]
version  = "0.33"
optional = true
features = ["std"]

[dependencies.ndarray]
version  = "0.16"
optional = true

[dependencies.rustfft]
version  = "6.2"
optional = true

[features]
default  = []
std      = ["nalgebra", "ndarray", "rustfft"]
embedded = ["micromath"]
ffi      = ["std"]
