[package]
name = "axon_pal_linux"
version = "0.6.0"
edition = "2021"
authors = ["Edison Lepiten <aieonyx.eu@gmail.com>"]
license = "Apache-2.0"
description = "AXON PAL implementation — Linux x86-64 (POSIX syscalls)"
repository = "https://github.com/aieonyx/AXON"
keywords = ["axon", "aieonyx", "linux", "pal", "syscall"]
categories = ["os", "no-std"]
readme = "README.md"

[features]
default = []

[dependencies]
axon_core  = { path = "../axon_core" }
axon_pal   = { path = "../axon_pal"  }
libc       = "0.2"

[dev-dependencies]
