[package]
name        = "axon_pal_windows"
version     = "0.6.0"
edition     = "2021"
authors     = ["Edison Lepiten <aieonyx.eu@gmail.com>"]
license     = "Apache-2.0"
description = "AXON PAL — Windows Win32"
repository  = "https://github.com/aieonyx/AXON"

[dependencies]
axon_core   = { path = "../axon_core" }
axon_pal    = { path = "../axon_pal"  }

[dev-dependencies]
