[package]
name        = "axon_rt"
version     = "0.1.0"
edition     = "2021"
description = "AXON runtime — defer guards, capability stubs, sovereign primitives"
authors     = ["Edison Lepiten <aieonyx.eu@gmail.com>"]

[dependencies]
crossbeam-queue = "0.3"
erased-serde    = "0.4"
serde           = { version = "1", features = ["derive"] }

[features]
default        = ["axon_contracts"]
axon_contracts = []
